# concordium-base

./: .diff-wat-wasm.sh  .gitignore  .gitlab-ci.yml  .gitmodules  API.c  API.hs  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  NOTES.md  README.md  Setup.hs  base.patch  concordium-base.cabal  concordium-crypto.cabal  fourmolu.yaml  genesis-tools.Jenkinsfile  genesis-tools.Jenkinsfiles  identity-provider-service.Jenkinsfile  merge_tx.patch  package.yaml  rm_issuer_from_state.patch  rustfmt.toml  shell.nix  stack  stack.integer-simple.yaml  stack.yaml
cddl/: cis-7.cddl  (+1 more)
concordium-contracts-common-derive/: CHANGELOG.md  Cargo.toml
concordium-contracts-common-derive/src/: attribute.rs  derive.rs  lib.rs
identity-provider-service/: CHANGELOG.md  Cargo.toml  README.md  deployment.md  generate-testdata.sh
identity-provider-service/data/: anonymity_revokers.json  fail_validation_request.json  global.json  identity_provider.json  identity_provider.pub.json  valid_request.json  valid_request_v1.json
identity-provider-service/doc/: identity-provider-sequence-diagram-source.txt
identity-provider-service/html/: attribute_form.html  attribute_form_with_login.html
identity-provider-service/src/: main.rs
idiss/: CHANGELOG.md  CHANGES.md  Cargo.toml  ChangeLog.md  README.md  build.rs  example.js
idiss/.cargo/: config
idiss/files/: anonymity_revokers.json  ip_info.json
idiss/src/: cs_exports.rs  go_exports.rs  lib.rs  nodejs_exports.rs  wasm_exports.rs
mobile_wallet/: .gitignore  Build.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  mobile_wallet.h
mobile_wallet/.cargo/: config.toml
mobile_wallet/android/: build-android.sh
mobile_wallet/android/mobile_wallet_lib/: build.gradle
mobile_wallet/ios/: build-ios.sh  module.modulemap
mobile_wallet/scripts/: android.Jenkinsfile  build-ios.sh  ios.Jenkinsfile
mobile_wallet/src/: android.rs  ios.rs  lib.rs
rust-bins/: CHANGELOG.md  Cargo.toml  Makefile  client  data-generation-notes.md
rust-bins/demo-wallet-notes/: README.md
rust-bins/demo-wallet-notes/example_server_interactions/: example_credential_request.json  example_credential_request_existing.json  example_credential_response.json  example_credential_response_existing.json  example_id_object_request.json  example_id_object_response.json  global.json  identity-providers-public-private.json
rust-bins/docs/: genesis-tool.md  id-client.md  identity-provider-cli.md  keygen-genesis.md  keygen.md  pg-test-tool.md  user-cli.md
rust-bins/example_server_interactions/: example_credential_request.json  example_credential_request_existing.json  example_credential_response.json  example_id_object_request.json
rust-bins/id-client-notes/: instructions.md
rust-bins/src/: keygen.rs  lib.rs
rust-bins/wallet-notes/: CHANGES.md  README.md  check-wallet.sh  credential-input.json  credential-response.json  drop.py  example-id-object-data.json  example-id-object-response.json  example-request.py  example.c  id-request.json  input.json  ip_info.json  server-interactions.md  transfer-input.json  transfer-output.json
rust-bins/wallet-notes/database/: identity_provider-0.json  identity_provider-0.pub.json
rust-bins/wallet-notes/files/: 2-create_account_transaction-input.json  2-create_account_transaction-output.json  2-create_configure_delegation_transaction-input.json  2-create_configure_delegation_transaction-output.json  anonymity_revokers.json  create_account_transaction-input.json  create_account_transaction-output.json  create_configure_baker_transaction-input.json  create_configure_baker_transaction-output.json  create_configure_delegation_transaction-input.json  create_configure_delegation_transaction-output.json  create_credential-input.json  create_credential-input2.json  create_credential-output.json  create_credential-output2.json  create_credential-v1-input.json  create_credential-v1-output.json  create_encrypted_amount-input.json  create_encrypted_amount-input2.json  create_encrypted_amount-output.json  create_encrypted_amount-output2.json  create_encrypted_transfer-input.json  create_encrypted_transfer-output.json  create_encrypted_transfer_with_memo-input.json  create_encrypted_transfer_with_memo-output.json  create_id_request_and_private_data-input.json  create_id_request_and_private_data-output.json  create_id_request_and_private_data-output2.json  create_id_request_and_private_data-v1-input.json  create_id_request_and_private_data-v1-output.json  create_pre_account_transaction-input.json  (+42 more)
rust-src/: CHANGELOG.md  Cargo.toml
rust-src/.cargo/: config.toml
rust-src/aggregate_sig/: Cargo.toml
rust-src/bulletproofs/: Cargo.toml
rust-src/common/: Cargo.toml
rust-src/concordium_base/: CHANGELOG.md  Cargo.toml  README.md
rust-src/concordium_base_derive/: Cargo.toml  README.md
rust-src/crypto_common/: Cargo.toml
rust-src/crypto_common_derive/: Cargo.toml
rust-src/curve_arithmetic/: Cargo.toml  README_G1Hash.md
rust-src/dodis_yampolskiy_prf/: Cargo.toml
rust-src/ec_vrf_ed25519_sha256/: Cargo.toml
rust-src/ecvrf/: Cargo.toml
rust-src/ed25519_hd_key_derivation/: Cargo.toml
rust-src/eddsa_ed25519/: Cargo.toml
rust-src/elgamal/: Cargo.toml
rust-src/encrypted-amounts/: Cargo.toml
rust-src/encrypted_transfers/: Cargo.toml
rust-src/ffi_helpers/: Cargo.toml
rust-src/ffi_macros/: Cargo.toml
rust-src/id/: Cargo.toml
rust-src/key_derivation/: CHANGELOG.md  Cargo.toml
rust-src/keygen_bls/: CHANGELOG.md  Cargo.toml
rust-src/mobile_wallet/: Cargo.toml  mobile_wallet.h
rust-src/pairing/: Cargo.toml  README.md
rust-src/pedersen_scheme/: Cargo.toml
rust-src/pedersen_scheme2/: Cargo.toml
rust-src/ps_sig/: Cargo.toml
rust-src/random_oracle/: Cargo.toml  README.md
rust-src/secret_sharing/: Cargo.toml
rust-src/sha_2/: Cargo.toml
rust-src/sigma_protocols/: Cargo.toml
rust-src/simple_id_client/: Cargo.toml  README.md
rust-src/vector_pedersen_scheme/: Cargo.toml
rust-src/wallet/: Cargo.toml  build.rs  example.c  example.py
rust-src/wallet_api/: Cargo.toml
rust-src/wallet_library/: CHANGELOG.md  Cargo.toml
(+1062 files in other folders)
