Name:           concordium-crypto
version:         0.1
Synopsis:       Crypto infrastructure for Concordium block chain
Description:
License:        BSD3
Author:         Concordium.com
Stability:      Experimental
Cabal-Version:       >=1.18
Build-Type:     Custom

custom-setup
  setup-depends:
    base  >= 4.7,
    Cabal >= 2.2,
    directory >= 1.3

source-repository head
  type: git
  location: https://gitlab.com/Concordium/crypto

Library
  default-language: Haskell2010
  default-extensions:      ForeignFunctionInterface

  ghc-options: -Wall -O2
  hs-source-dirs: haskell-src
  Exposed-modules: Concordium.Crypto.SHA256
                   Concordium.Crypto.SHA224
                   Concordium.Crypto.Ed25519Signature
                   Concordium.Crypto.BlsSignature
                   Concordium.Crypto.BlockSignature
                   Concordium.Crypto.SignatureScheme
                   Concordium.Crypto.AccountSignatureSchemes
                   Concordium.Crypto.VRF
                   Data.FixedByteString
                   Data.Base58Encoding
                   Concordium.ID.Types
                   Concordium.ID.Account
                   Concordium.Crypto.FFIDataTypes
                   Concordium.Crypto.ByteStringHelpers

  Other-modules:  Concordium.Crypto.FFIHelpers
                  Data.Base58Encoding.TH

  Build-depends:  base >=4.7
                , aeson >= 1.4.2
                , scientific >= 0.3.6
                , bytestring >=0.10
                , base16-bytestring
                , cereal >=0.5.7
                , hashable >= 1.0.1.1
                , random >= 1.1
                , stringbuilder >=0.5.0
                , containers >= 0.5.11.0
                , time       >= 1.7
                , random-bytestring >= 0.1.3.0
                , QuickCheck >= 2.10
                , vector >= 0.12
                , template-haskell >= 2.14
                , text >= 1.2.3.1
                , primitive == 0.6.*
                , deepseq >= 1.4

  extra-libraries: ec_vrf_ed25519
                   sha_2,
                   eddsa_ed25519,
                   sigma_protocols,
                   ffi_helpers,
                   id,
                   aggregate_sig

  if os(windows)
        extra-libraries: ws2_32
                         userenv


Test-Suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: haskell-tests
  build-depends:    hspec >= 2.5
                    , QuickCheck >= 2.10
                    , hspec-expectations >= 0.8
                    , base >= 4.7
                    , concordium-crypto
                    , bytestring >=0.10
                    , cereal >=0.5.7
                    , random >= 1.1
                    , aeson >= 1.4.2
  ghc-options: -threaded -with-rtsopts=-N -Wall -O2
  other-modules:
   ConcordiumTests.Data.Base58Encoding
   ConcordiumTests.Crypto.SHA256
   ConcordiumTests.Crypto.SHA224
   ConcordiumTests.Crypto.Ed25519Signature
   ConcordiumTests.Crypto.VRF
   ConcordiumTests.Crypto.FFIDataTypes
   ConcordiumTests.Crypto.FFIVerify
   ConcordiumTests.Crypto.BlsSignature
   ConcordiumTests.ID.Types

benchmark perf
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Perf.hs
  hs-source-dirs: haskell-tests
  build-depends: base >= 4.7
               , concordium-crypto
               , bytestring >= 0.10
               , criterion >= 1.5.4
               , cereal >=0.5.7
  other-modules:
    PerformanceTests.Ed25519Perf
    PerformanceTests.SHA256Perf
    PerformanceTests.VerifyCredentialPerf
