Name:           concordium-crypto
version:         0.1
Synopsis:       Crypto infrastructure for Concordium block chain
Description:
License:        BSD3
Author:         Concordium.com
Stability:      Experimental
Cabal-Version:       >=1.18
Build-Type:     Custom

custom-setup
  setup-depends:
    base  >= 4.7,
    Cabal >= 2.2,
    directory >= 1.3

source-repository head
  type: git
  location: https://gitlab.com/Concordium/crypto

Library
  default-language: Haskell2010
  default-extensions:      ForeignFunctionInterface

  ghc-options: -Wall -O2
  hs-source-dirs: haskell-src
  Exposed-modules: Concordium.Crypto.SHA256
                   Concordium.Crypto.Ed25519Signature
                   Concordium.Crypto.BlsSignature
                   Concordium.Crypto.BlockSignature
                   Concordium.Crypto.SignatureScheme
                   Concordium.Crypto.VRF
                   Data.FixedByteString
                   Data.Base58Encoding
                   Concordium.ID.Types
                   Concordium.ID.Account
                   Concordium.ID.Parameters
                   Concordium.ID.IdentityProvider
                   Concordium.Crypto.FFIDataTypes
                   Concordium.Crypto.ByteStringHelpers
                   Concordium.Crypto.Proofs

  Other-modules:  Concordium.Crypto.FFIHelpers
                  Data.Base58Encoding.TH

  Build-depends:  base >=4.7
                , aeson >= 1.4.2
                , aeson-pretty >= 0.8
                , scientific >= 0.3.6
                , bytestring >=0.10
                , base16-bytestring
                , cereal >=0.5.7
                , hashable >= 1.0.1.1
                , random >= 1.1
                , containers >= 0.5.11.0
                , unordered-containers >= 0.2.9.0
                , time       >= 1.7
                , QuickCheck >= 2.10
                , vector >= 0.12
                , template-haskell >= 2.14
                , text >= 1.2.3.1
                , primitive == 0.6.*
                , deepseq >= 1.4
                , ghc-prim >= 0.5.3
                , constraints >= 0.10

  extra-libraries: ec_vrf_ed25519
                   sha_2,
                   eddsa_ed25519,
                   ffi_helpers,
                   id,
                   aggregate_sig

  if os(windows)
        extra-libraries: ws2_32
                         userenv


Test-Suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: haskell-tests
  build-depends:    hspec >= 2.5
                    , QuickCheck >= 2.10
                    , hspec-expectations >= 0.8
                    , base >= 4.7
                    , concordium-crypto
                    , bytestring >=0.10
                    , cereal >=0.5.7
                    , random >= 1.1
                    , aeson >= 1.4.2
                    , mtl >= 2.2
  ghc-options: -threaded -with-rtsopts=-N -Wall -O2 -Wno-deprecations
  if os(linux)
     ld-options: -static

  other-modules:
   ConcordiumTests.Data.Base58Encoding
   ConcordiumTests.Crypto.SHA256
   ConcordiumTests.Crypto.Ed25519Signature
   ConcordiumTests.Crypto.VRF
   ConcordiumTests.Crypto.FFIDataTypes
   ConcordiumTests.Crypto.FFIVerify
   ConcordiumTests.Crypto.BlsSignature
   ConcordiumTests.ID.Types
   ConcordiumTests.Crypto.Ed25519DlogProofs

benchmark ed25519-perf
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: PerformanceTests/Ed25519Perf.hs
  hs-source-dirs: haskell-tests
  ghc-options: -Wall -O2
  if os(linux)
     ld-options: -static
  build-depends: base >= 4.7
               , concordium-crypto
               , bytestring >= 0.10
               , criterion >= 1.5.4
               , cereal >=0.5.7

benchmark sha256-perf
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: PerformanceTests/SHA256Perf.hs
  hs-source-dirs: haskell-tests
  ghc-options: -Wall -O2
  if os(linux)
     ld-options: -static
  build-depends: base >= 4.7
               , concordium-crypto
               , bytestring >= 0.10
               , criterion >= 1.5.4
               , cereal >=0.5.7

benchmark verify-credential-perf
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: PerformanceTests/VerifyCredentialPerf.hs
  hs-source-dirs: haskell-tests
  ghc-options: -Wall -O2
  if os(linux)
     ld-options: -static
  build-depends: base >= 4.7
               , concordium-crypto
               , bytestring >= 0.10
               , criterion >= 1.5.4
               , cereal >=0.5.7