[package]
name = "identity-provider-service"
version = "0.1.0"
authors = ["Concordium AG <contact@concordium.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# embed the ssl library into the binary for easier distribution.
vendored-ssl = ["reqwest/native-tls-vendored"]

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pairing = "0.15"
uuid = { version = "0.8", features = ["v4"] }
log = "0.4.11"
env_logger = "0.7.1"
structopt = "0.3"
reqwest = { version = "0.10", features = ["json"] }
url = "2.1.1"
clap = "2.33"
anyhow = "1.0"
hex = "0.4"
rust-embed="5.6.0"
ed25519-dalek = "=1.0"
chrono = "0.4.19"

[dependencies.id]
path = "../rust-src/id"
version = "0"

[dependencies.crypto_common]
path = "../rust-src/crypto_common"
version = "0"

[dependencies.curve_arithmetic]
path = "../rust-src/curve_arithmetic"
version = "0"

[dev-dependencies]
tokio-test = "0.3"

[[bin]]
path = "src/bin/identity_verifier.rs"
name = "identity-verifier"

[[bin]]
path = "src/bin/main.rs"
name = "identity-provider-service"