[package]
name = "identity-provider-service"
version = "0.4.0"
authors = ["Concordium AG <developers@concordium.com>"]
edition = "2018"
license-file = "../../LICENSE-APACHE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# embed the ssl library into the binary for easier distribution.
vendored-ssl = ["reqwest/native-tls-vendored"]

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pairing = "0.15"
log = "0.4.11"
env_logger = "0.9"
structopt = "0.3"
reqwest = { version = "0.11", features = ["json"] }
url = "2.1.1"
clap = "2.33"
anyhow = "1.0"
hex = "0.4"
rust-embed = "6"
ed25519-dalek = "=1.0"
chrono = "0.4.19"
sha2 = "0.10"

[dependencies.id]
path = "../rust-src/id"
version = "0"

[dependencies.crypto_common]
path = "../rust-src/crypto_common"
version = "0"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
path = "src/bin/identity_verifier.rs"
name = "identity-verifier"

[[bin]]
path = "src/bin/main.rs"
name = "identity-provider-service"