[package]
name = "misc_tools"
version = "2.0.0"
authors = ["Concordium AG <developers@concordium.com>"]
edition = "2018"
license-file = "../../LICENSE-APACHE"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored-ssl = ["openssl-sys/vendored"]

[dependencies]
clap = "2.33"
dialoguer = "0.10"
pairing = "0.15"
rand = "=0.7"
serde = "1.0"
serde_json = "1.0"
ed25519-dalek = "=1.0"
curve25519-dalek = "3.0"
structopt = "0.3"
hex = "0.4"
sha2 = "0.10"
hkdf = "0.12"
ff = "0.5"
hmac = "0.12"
reqwest = {version = "0.11", features = ["json", "blocking"]}
url = "2.1.1"
chrono = "0.4.19"
either = "1.6"
openssl-sys = {version = "0.9", optional = true}
aes = "0.8"
base64 = "0.13"
pbkdf2 = "0.11"
rpassword = "6.0"
bitvec = "1"
crossterm = "0.22"
anyhow = "1.0"
openssl-src = "=111.25.0" # Fix openssl-src to version 111.25 since the newer ones are not supported on Rust 1.62. Once we update rust to 1.63+ remove this.

[dependencies.ed25519_hd_key_derivation]
path = "../rust-src/ed25519_hd_key_derivation"
version = "1.0.0"

[dependencies.key_derivation]
path = "../rust-src/key_derivation"
version = "1.1.0"

[dependencies.keygen_bls]
path = "../rust-src/keygen_bls"
version = "2.0.0"

[dependencies.concordium_base]
path = "../rust-src/concordium_base"
version = "0"
features = ["encryption"]

[lib]
name = "client_server_helpers"
path = "src/lib.rs"
