[package]
name = "misc_tools"
version = "2.0.2"
authors = ["Concordium AG <developers@concordium.com>"]
edition = "2018"
license-file = "../../LICENSE-APACHE"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored-ssl = ["openssl-sys/vendored"]

[dependencies]
clap = "2.33"
dialoguer = "0.10"
rand = "=0.8"
serde = "1.0"
serde_json = "1.0"
ed25519-dalek = { version = "2.0", features = ["serde"]}
curve25519-dalek = "4.0"
structopt = "0.3"
hex = "0.4"
sha2 = "0.10"
hkdf = "0.12"
ff = "0.5"
hmac = "0.12"
reqwest = {version = "0.11", features = ["json", "blocking"]}
url = "2.1.1"
chrono = "0.4"
either = "1.6"
openssl-sys = {version = "0.9", optional = true}
aes = "0.8"
base64 = "0.21"
pbkdf2 = "0.11"
rpassword = "6.0"
bitvec = "1"
crossterm = "0.22"
anyhow = "1.0"
ark-bls12-381 = { version = "0.4"}
ark-ec = { version = "0.4"}

[dependencies.ed25519_hd_key_derivation]
path = "../rust-src/ed25519_hd_key_derivation"
version = "1.0.0"

[dependencies.key_derivation]
path = "../rust-src/key_derivation"
version = "2.0.0"

[dependencies.keygen_bls]
path = "../rust-src/keygen_bls"
version = "2.0.0"

[dependencies.concordium_base]
path = "../rust-src/concordium_base"
version = "*"
features = ["encryption"]

[lib]
name = "client_server_helpers"
path = "src/lib.rs"
