[workspace]

members=[
   "curve_arithmetic",
   "ec_vrf_ed25519_sha256",
   "eddsa_ed25519",
   "sha_2",
   "dodis_yampolskiy_prf",
   "pedersen_scheme",
   "elgamal",
   "ps_sig",
   "id",
   "ffi_helpers",
   "aggregate_sig",
   "crypto_common",
   "crypto_common_derive",
   "random_oracle",
   "wallet",
   "mobile_wallet"
]
