[package]
name = "aggregate_sig"
version = "0.1.0"
authors = ["nfk93 <nfk1993@gmail.com>"]
edition = "2018"

[dependencies]
rand = "=0.7"
sha2 = "0.8"
rayon = "1.1.0"
libc  = "0.2"
generic-array = "0.12"
pairing = "0.15"
ff = "0.5"
group = "0.2"

[dependencies.curve_arithmetic]
path = "../curve_arithmetic"
version = "0"

[dependencies.crypto_common]
path = "../crypto_common"
version = "0"

[dependencies.crypto_common_derive]
path = "../crypto_common_derive"
version = "0"

[dependencies.ffi_helpers]
path= "../ffi_helpers"
version = "0"

[dependencies.random_oracle]
path = "../random_oracle"
version = "0"

[dependencies.id]
path="../id"
version = ""

[dev-dependencies]
criterion = "0.2"

[lib]
name = "aggregate_sig"
crate-type = ["rlib", "staticlib", "cdylib"]

[[bench]]
name = "bench"
harness = false
